# phasecurvefit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  conftest.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  release.yml
.github/workflows/: cd.yml  ci.yml
docs/: Makefile  conf.py  contributing.md  index.md  migration.md
docs/_static/: generate_epitrochoid_favicon.py
docs/api/: index.md
docs/guides/: algorithm.md  examples.md  jax-integration.md  metrics.md  nn.md  orderers.md  outliers.md  quickstart.md
docs/tutorials/: epitrochoid_autoencoder.ipynb  epitrochoid_mst.ipynb  epitrochoid_runningmean.ipynb  index.md  outlier_rejection.ipynb  stream_autoencoder.ipynb  stream_mst.ipynb  stream_runningmean.ipynb
paper/: paper.bib  paper.md
src/localflowwalk/: __init__.py  metrics.py  nn.py  w.py
src/localflowwalk/_interop/: __init__.py  interop_unxt.py
src/localflowwalk/_src/: algorithm.py  autoencoder.py  custom_types.py  metrics.py  phasespace.py  query_config.py  strategies.py  utils.py
src/localflowwalk/_src/autoencoder/: __init__.py  autoencoder.py  externalautoencoder.py  externaldecoder.py  normalize.py  order_net.py  track_net.py  utils.py
src/phasecurvefit/: __init__.py  metrics.py  nn.py  orderers.py  strats.py  w.py
src/phasecurvefit/_interop/: interop_unxt.py
src/phasecurvefit/_src/: __init__.py  abstract_result.py  abstract_walk_result.py  algorithm.py  custom_types.py  metrics.py  phasespace.py  query_config.py  strategies.py
src/phasecurvefit/_src/autoencoder/: __init__.py  autoencoder.py  externalautoencoder.py  externaldecoder.py  normalize.py  order_net.py  scanmlp.py  track_net.py  utils.py
src/phasecurvefit/_src/nn/: __init__.py  abstractautoencoder.py  autoencoder.py  externalautoencoder.py  externaldecoder.py  membership.py  order_net.py  result.py  scanmlp.py  track_net.py  trainer.py  utils.py
src/phasecurvefit/_src/orderers/: __init__.py  base.py  localflow.py  mst.py  result.py
tests/: test_algorithm.py  test_autoencoder.py  test_beartype_enabled.py  test_bounded_while.py  test_deprecate_walk.py  test_interop_unxt.py  test_kdtree.py  test_membership.py  test_metrics.py  test_mst.py  test_mst_velocity.py  test_orderer_autoencoder.py  test_orderers.py  test_orderers_unxt.py  test_phasespace.py  test_quantity_support.py  test_shape_validation.py  test_track_net.py  test_youdecoder.py
tests/benchmarks/: conftest.py  test_autoencoder.py  test_gap_filling.py  test_metrics.py  test_normalizer.py  test_walk_local_flow.py
tests/usage/: baseline_hashes.json  test_epitrochoid.py  test_self_intersecting_stream.py
