[project]
authors = [
  { name = "GalacticDynamics", email = "nstarman@users.noreply.github.com" },
  { name = "Nathaniel Starkman", email = "nstarman@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "equinox>=0.11.0",
  "galax",
  "jax>=0.7.2",
  "jax-bounded-while>=0.1",
  "jax-tqdm>=0.4.0",
  "jaxtyping>=0.3.5",
  "optax>=0.2.4",
  "optional-dependencies>=0.4.0",
  "orbax-checkpoint>=0.11.32",
  "plum-dispatch>=2.6.1",
  "quax>=0.2.1",
  "unxt",
  "zeroth>=1.0.1",
]
description = "Walk through phase-space observations"
dynamic = ["version"]
license.file = "LICENSE"
name = "phasecurvefit"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
interop = ["unxt>=1.10.0"]
kdtree  = ["jaxkd>=0.0.5"]

[project.urls]
"Bug Tracker" = "https://github.com/GalacticDynamics/phasecurvefit/issues"
Changelog     = "https://github.com/GalacticDynamics/phasecurvefit/releases"
Homepage      = "https://github.com/GalacticDynamics/phasecurvefit"


[build-system]
build-backend = "hatchling.build"
requires      = ["hatch-vcs", "hatchling"]

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "matplotlib>=3.10.8",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "nox" },
  { include-group = "test" },
  "ipywidgets>=8.1.8",
]
docs = [
  "myst-parser>=4.0.0",
  "nbsphinx>=0.9.3",
  "pytz>=2024.2",
  "sphinx>=8.1.3",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-autodoc-typehints>=2.6.1",
  "sphinx-book-theme>=1.1.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-prompt>=1.9.0",
  "sphinx-togglebutton>=0.3.2",
  "sphinxcontrib-bibtex>=2.6.3",
  "sphinxext-opengraph>=0.9.2",
  "jaxkd>=0.0.5",
  "galax",
]
lint = ["cz-conventional-gitmoji>=0.6.1", "pre-commit>=4.1.0", "pylint>=3.3.8"]
nox = ["nox>=2024.10.9", "nox-uv>=0.6.3"]
test = [
  "beartype>=0.21.0",
  "hypothesis[numpy]>=6.138.14",
  "matplotlib>=3.8",
  "pytest>=9.0.2",
  "pytest-arraydiff>=0.6.1",
  "pytest-benchmark>=5.1.0",
  "pytest-codspeed>=4.2.0",
  "pytest-cov>=6.2.1",
  "pytest-env>=1.1.5",
  "pytest-github-actions-annotate-failures>=0.3.0",
  "pytest-mpl>=0.17.0",
  "pytest-randomly>=3.16.0",
  "pytest-timeout>=2.3.1",
  "sybil[pytest]>=8.0.0",
  "unxt>=1.10.0",
  "jaxkd>=0.0.5",
]


[tool.hatch]
build.hooks.vcs.version-file = "src/phasecurvefit/_version.py"
build.hooks.vcs.version-file-template = """\
version: str = {version!r}
version_tuple: tuple[int, int, int] | tuple[int, int, int, str, str]
version_tuple = {version_tuple!r}
"""
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[tool.codespell]
ignore-words-list = "leary"
skip              = ["uv.lock", "*.ipynb"]


[tool.commitizen]
name = "cz_gitmoji"


[tool.ruff]
[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "A002",    # Argument is shadowing a Python builtin
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "ARG001",  # Unused function argument
  "COM812",  # <- for ruff.format
  "D103",    # Missing docstring in public function
  "D105",    # Missing docstring in magic method
  "D107",    # Missing docstring in __init__
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "ERA001",  # Commented out code
  "F722",    # Syntax error in forward annotation <- jaxtyping
  "F811",    # redefinition of unused '...'  <- plum-dispatch
  "F821",    # undefined name '...'  <- jaxtyping
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with formatter
  "N806",    # Variable in function should be lowercase
  "PD",      # Pandas
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "PYI041",  # Use `complex` instead of `int | complex` <- plum is more strict
  "RUF022",  # `__all__` is not sorted
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ANN", "FBT003", "N803", "T201"]
"**tests/**" = [
  "ANN",
  "E731",
  "INP001",
  "N803",
  "PLC0415",
  "RUF059",
  "S101",
  "SLF001",
  "T20",
]
"__init__.py" = ["F403"]
"conftest.py" = ["ANN", "PLC0415"]
"docs/**" = ["N803", "T201"]
"docs/conf.py" = ["A001", "INP001", "T201"]
"noxfile.py" = ["A001", "T20"]
"src/phasecurvefit/_src/algorithm.py" = [
  "FBT003", # Boolean literal in function call is clearer than named constant
  "PYI025", # Set from collections.abc is clear in context
  "RUF059", # Unpacked tuple elements required for JAX while loop state
]
"src/phasecurvefit/_src/autoencoder.py" = [
  "ANN001", # Missing type annotations for nested loss functions
  "ANN202", # Missing return type for nested loss functions
  "C901",   # train_autoencoder is complex but well-structured
  "RUF003", # Greek letters are intentional in math code
  "RUF059", # Unpacked variable 'keys' used for structure
]
"src/phasecurvefit/_src/phasespace.py" = [
  "UP040", # TypeAlias is more explicit for Python 3.12
]
"src/phasecurvefit/_version.py" = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.aliases]
equinox                 = "eqx"
"hypothesis.strategies" = "st"
"jax.numpy"             = "jnp"
phasecurvefit           = "pcf"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = [
  "dataclassish",
  "is_annotated",
  "jax-bounded-while",
  "optional_dependencies",
  "quaxed",
  "unxt",
  "zeroth",
]
known-local-folder = ["phasecurvefit"]

[tool.ruff.format]
docstring-code-format = true


[tool.coverage]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
  'if TYPE_CHECKING:',
]
run.branch = true
run.source = ["phasecurvefit"]


[tool.mypy]
disallow_incomplete_defs = false
disallow_untyped_defs    = false
enable_error_code        = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files                    = ["src", "tests"]
python_version           = "3.12"
strict                   = true
warn_return_any          = false
warn_unreachable         = true
warn_unused_configs      = true

[[tool.mypy.overrides]]
disable_error_code       = ["name-defined", "no-redef", "type-arg"]
disallow_incomplete_defs = true
disallow_untyped_defs    = true
module                   = "phasecurvefit.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "equinox.*",
  "flax.*",
  "hypothesis.*",
  "jax.*",
  "jax_tqdm.*",
  "jaxtyping.*",
  "numpy.*",
  "optax.*",
  "plum.*",
  "unxt.*",
  "zeroth.*",
]


[tool.pylint]
ignore-paths = [".*/_version.py"]
messages_control.disable = [
  "cyclic-import",
  "design",
  "duplicate-code",                # Expected for public re-exports
  "fixme",
  "abstract-method",
  "function-redefined",            # plum-dispatch
  "import-error",                  # Optional dependencies handled via OptionalDependencyEnum
  "invalid-name",                  # handled by ruff
  "line-too-long",
  "missing-function-docstring",
  "missing-kwoa",                  # plum-dispatch
  "missing-module-docstring",
  "no-value-for-parameter",        # plum-dispatch
  "not-callable",                  # handled by mypy
  "property-with-parameters",      # handled by ruff
  "protected-access",              # handled by ruff
  "redefined-builtin",             # handled by ruff
  "too-many-function-args",        # plum-dispatch
  "unexpected-keyword-arg",        # plum-dispatch
  "unnecessary-lambda-assignment", # Intentional for clarity in some cases
  "unused-argument",               # handled by ruff
  "unused-import",                 # handled by ruff
  "unused-variable",               # handled by ruff
  "unused-wildcard-import",        # handled by ruff
  "wildcard-import",               # handled by ruff
  "wrong-import-order",            # handled by ruff
  "wrong-import-position",
  "W0221",                         # Arguments in function call differ from overridden method
]
py-version = "3.12"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"

[tool.pylint."FORMAT"]
max-module-lines = 2000


[tool.pytest.ini_options]
addopts = [
  "--arraydiff",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
  "-p no:doctest",                                       # using sybil
  "-ra",
  "--timeout=300",                                       # 5 minute timeout per test
  "--randomly-seed=0",                                   # Deterministic by default, but randomizes test order
  "--randomly-dont-reorganize",                          # Keep test class/module structure, only shuffle within
  "--ignore=tests/benchmarks/",                          # Exclude benchmark tests from normal runs
  "--mpl-hash-library=tests/usage/baseline_hashes.json",
]
filterwarnings = [
  "error",
  # pytest
  "ignore:The hookimpl.*uses old-style configuration options:pytest.PytestDeprecationWarning",
  # jax
  "ignore:jax\\.core\\.pp_eqn_rules is deprecated:DeprecationWarning",
  "ignore:jax\\.core\\.Primitive is deprecated:DeprecationWarning",
  "ignore:jax\\.interpreters\\.batching\\.NotMapped is deprecated:DeprecationWarning",
  "ignore:The numpy\\.array_function protocol:DeprecationWarning",
  "ignore:numpy\\.ndarray size changed:RuntimeWarning",
  # matplotlib
  "ignore::DeprecationWarning:matplotlib",
  # numpy (platform-specific longdouble probe warning during import)
  "ignore:Signature .* for <class 'numpy\\.longdouble'> does not match any known type:UserWarning:numpy\\._core\\.getlimits",
]
log_level = "INFO"
minversion = "8.3"
norecursedirs = [".*", "__pycache__", "docs/_build"]
testpaths = ["README.md", "docs", "src/", "tests/"]
xfail_strict = true


[tool.pytest_env]
PHASECURVEFIT_ENABLE_RUNTIME_TYPECHECKING = "beartype.beartype"


[tool.repo-review]
ignore = ["PC140"]

[tool.uv.sources]
galax = { git = "https://github.com/GalacticDynamics/galax" }
